spade-tests/src/snapshots/spade_tests__affine_check__using_a_single_affine_field_does_not_use_the_whole_struct.snap
---
source: spade-tests/src/affine_check.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: Unused resource
  ┌─ testinput:5:10
  │
5 │ entity x(a: A) -> &mut bool {
  │          ^ a.b is unused
  │
  = note: a.b is a &mut value which must be set


